# Hackathon_0_Bronze_Tier

./: .env  .env.example  .gitignore  README.md  pyproject.toml  quickstart.ps1
.obsidian/: workspace.json
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md  README.md
AI_Employee_Vault/Brain/: README.md
AI_Employee_Vault/Done/: README.md
AI_Employee_Vault/Inbox/: README.md
AI_Employee_Vault/Memory/: README.md
AI_Employee_Vault/Needs_Action/: README.md
AI_Employee_Vault/Pending_Approval/: README.md
AI_Employee_Vault/Skills/: README.md
AI_Employee_Vault/Workflows/: README.md
bronze-qs/.obsidian/: workspace.json
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  context_manager.py  core_agent.py  skills_manager.py
src/mcp_servers/: __init__.py  base_server.py  email_mcp.py  file_mcp.py
src/watchers/: __init__.py  fs_watcher.py  gmail_watcher.py  whatsapp_watcher.py
